<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Home">


    <AutoCompleteTextView
        android:id="@+id/origin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="22dp"
        android:height="48dp"
        android:background="@drawable/edit_text_border"
        android:completionThreshold="0"
        android:hint="@string/from_where_pt"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusForward="@id/destination"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/destino_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/destination"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="@dimen/_22sdp"
        android:height="48dp"
        android:background="@drawable/edit_text_border"
        android:completionThreshold="0"
        android:hint="@string/to_where_pt"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusForward="@id/horarios"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/horarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/destino_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/to_pt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/destination"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/swap_locations_button"
        android:layout_width="42dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:contentDescription="swap locations button"
        android:minWidth="48dp"
        android:minHeight="36dp"
        android:onClick="swap_locations"
        android:rotation="90"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin"
        app:srcCompat="@drawable/_312655" />

    <TextView
        android:id="@+id/origem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/from_pt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/origin"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/company_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="Company logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_no_background"
        app:layout_constraintBottom_toTopOf="@+id/origem_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="20"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:width="120dp"
        android:height="55dp"
        android:background="@drawable/button"
        android:onClick="login"
        android:text="@string/log_in_pt"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:background="@android:color/transparent"
        android:hapticFeedbackEnabled="false"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:onClick="profile"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_icon" />

    <TableLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/table_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="29dp">

            <TextView
                android:id="@+id/home_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingHorizontal="5dp"
                android:text="Início"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_us_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="about_us"
                android:paddingHorizontal="5dp"
                android:text="Sobre nós"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/help_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="help"
                android:paddingHorizontal="5dp"
                android:text="Ajuda"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="|"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/definitions_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="settings"
                android:paddingHorizontal="5dp"
                android:text="Definições"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/table_select_language"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/select_pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="swap_language_pt">

            <ImageView
                android:id="@+id/select_pt_image"
                android:layout_width="48dp"
                android:layout_height="34dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flag_pt" />

            <TextView
                android:id="@+id/select_pt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:text="Português"
                android:textAlignment="center"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/select_uk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="swap_language_en">

            <ImageView
                android:id="@+id/select_image_uk"
                android:layout_width="30dp"
                android:layout_height="19dp"
                app:srcCompat="@drawable/flag_uk" />

            <TextView
                android:id="@+id/select_uk_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:text="English"
                android:textAlignment="center"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:id="@+id/select_es"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="swap_language_es"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flag_es" />

            <TextView
                android:id="@+id/select_es_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:text="Español"
                android:textAlignment="center"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/current_language_pt"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:onClick="show_language_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="48dp"
            android:layout_height="34dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="34dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flag_pt" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/language_pt"
                android:text="Português"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_select" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/current_language_en"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:onClick="show_language_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="48dp"
            android:layout_height="34dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="34dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flag_uk" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:onClick="show_language_options"
                android:text="English"
                android:textAlignment="center"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_select" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/current_language_es"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:onClick="show_language_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="48dp"
            android:layout_height="34dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="34dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flag_es" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:onClick="show_language_options"
                android:text="Español"
                android:textAlignment="center"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_select" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/horarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:width="100dp"
        android:background="@drawable/button"
        android:onClick="verHorario"
        android:text="@string/timetable_pt"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/map_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/proximos_autocarros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:width="100dp"
        android:background="@drawable/button"
        android:text="@string/nextbus_pt"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:clickable="true"
        android:onClick="verProximosAutocarros"
        app:layout_constraintBottom_toTopOf="@+id/map_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/map_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="map"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="103dp"
            android:layout_marginVertical="4dp"
            android:background="@null"
            android:onClick="map"
            android:translationZ="90dp"
            app:srcCompat="@drawable/maps_icon_8214" />

        <Button
            android:id="@+id/ver_mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:background="@drawable/button"
            android:onClick="map"
            android:paddingHorizontal="20dp"
            android:text="@string/map_pt"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="13sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>